// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`text-input [snapshot] > lg, default 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-default"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
    placeholder=" "
    type="text"
    value="banana"
  />
</div>
`;

exports[`text-input [snapshot] > lg, default, disabled 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-default"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
    disabled=""
    placeholder=" "
    type="text"
  />
</div>
`;

exports[`text-input [snapshot] > lg, default, full options 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-default"
>
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
    name="field-name"
    placeholder="Placeholder text"
    type="text"
    value="banana"
  />
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`text-input [snapshot] > lg, error 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-error"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
    placeholder=" "
    type="text"
    value="banana"
  />
</div>
`;

exports[`text-input [snapshot] > lg, error, disabled 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-error"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
    disabled=""
    placeholder=" "
    type="text"
  />
</div>
`;

exports[`text-input [snapshot] > lg, error, full options 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-error"
>
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
    name="field-name"
    placeholder="Placeholder text"
    type="text"
    value="banana"
  />
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`text-input [snapshot] > lg, success 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-success"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
    placeholder=" "
    type="text"
    value="banana"
  />
</div>
`;

exports[`text-input [snapshot] > lg, success, disabled 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-success"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
    disabled=""
    placeholder=" "
    type="text"
  />
</div>
`;

exports[`text-input [snapshot] > lg, success, full options 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-success"
>
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
    name="field-name"
    placeholder="Placeholder text"
    type="text"
    value="banana"
  />
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`text-input [snapshot] > lg, warning 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-warning"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
    placeholder=" "
    type="text"
    value="banana"
  />
</div>
`;

exports[`text-input [snapshot] > lg, warning, disabled 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-warning"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
    disabled=""
    placeholder=" "
    type="text"
  />
</div>
`;

exports[`text-input [snapshot] > lg, warning, full options 1`] = `
<div
  class="vesper-text-input vesper-text-input-lg vesper-text-input-warning"
>
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-md vesper-text-input-field"
    name="field-name"
    placeholder="Placeholder text"
    type="text"
    value="banana"
  />
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`text-input [snapshot] > md, default 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-default"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    placeholder=" "
    type="text"
    value="banana"
  />
</div>
`;

exports[`text-input [snapshot] > md, default, disabled 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-default"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    disabled=""
    placeholder=" "
    type="text"
  />
</div>
`;

exports[`text-input [snapshot] > md, default, full options 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-default"
>
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    name="field-name"
    placeholder="Placeholder text"
    type="text"
    value="banana"
  />
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`text-input [snapshot] > md, error 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-error"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    placeholder=" "
    type="text"
    value="banana"
  />
</div>
`;

exports[`text-input [snapshot] > md, error, disabled 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-error"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    disabled=""
    placeholder=" "
    type="text"
  />
</div>
`;

exports[`text-input [snapshot] > md, error, full options 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-error"
>
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    name="field-name"
    placeholder="Placeholder text"
    type="text"
    value="banana"
  />
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`text-input [snapshot] > md, success 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-success"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    placeholder=" "
    type="text"
    value="banana"
  />
</div>
`;

exports[`text-input [snapshot] > md, success, disabled 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-success"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    disabled=""
    placeholder=" "
    type="text"
  />
</div>
`;

exports[`text-input [snapshot] > md, success, full options 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-success"
>
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    name="field-name"
    placeholder="Placeholder text"
    type="text"
    value="banana"
  />
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`text-input [snapshot] > md, warning 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-warning"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    placeholder=" "
    type="text"
    value="banana"
  />
</div>
`;

exports[`text-input [snapshot] > md, warning, disabled 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-warning"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    disabled=""
    placeholder=" "
    type="text"
  />
</div>
`;

exports[`text-input [snapshot] > md, warning, full options 1`] = `
<div
  class="vesper-text-input vesper-text-input-md vesper-text-input-warning"
>
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-sm vesper-text-input-field"
    name="field-name"
    placeholder="Placeholder text"
    type="text"
    value="banana"
  />
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`text-input [snapshot] > sm, default 1`] = `
<div
  class="vesper-text-input vesper-text-input-sm vesper-text-input-default"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-xs vesper-text-input-field"
    placeholder=" "
    type="text"
    value="banana"
  />
</div>
`;

exports[`text-input [snapshot] > sm, default, disabled 1`] = `
<div
  class="vesper-text-input vesper-text-input-sm vesper-text-input-default"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-xs vesper-text-input-field"
    disabled=""
    placeholder=" "
    type="text"
  />
</div>
`;

exports[`text-input [snapshot] > sm, default, full options 1`] = `
<div
  class="vesper-text-input vesper-text-input-sm vesper-text-input-default"
>
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-xs vesper-text-input-field"
    name="field-name"
    placeholder="Placeholder text"
    type="text"
    value="banana"
  />
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`text-input [snapshot] > sm, error 1`] = `
<div
  class="vesper-text-input vesper-text-input-sm vesper-text-input-error"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-xs vesper-text-input-field"
    placeholder=" "
    type="text"
    value="banana"
  />
</div>
`;

exports[`text-input [snapshot] > sm, error, disabled 1`] = `
<div
  class="vesper-text-input vesper-text-input-sm vesper-text-input-error"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-xs vesper-text-input-field"
    disabled=""
    placeholder=" "
    type="text"
  />
</div>
`;

exports[`text-input [snapshot] > sm, error, full options 1`] = `
<div
  class="vesper-text-input vesper-text-input-sm vesper-text-input-error"
>
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-xs vesper-text-input-field"
    name="field-name"
    placeholder="Placeholder text"
    type="text"
    value="banana"
  />
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`text-input [snapshot] > sm, success 1`] = `
<div
  class="vesper-text-input vesper-text-input-sm vesper-text-input-success"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-xs vesper-text-input-field"
    placeholder=" "
    type="text"
    value="banana"
  />
</div>
`;

exports[`text-input [snapshot] > sm, success, disabled 1`] = `
<div
  class="vesper-text-input vesper-text-input-sm vesper-text-input-success"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-xs vesper-text-input-field"
    disabled=""
    placeholder=" "
    type="text"
  />
</div>
`;

exports[`text-input [snapshot] > sm, success, full options 1`] = `
<div
  class="vesper-text-input vesper-text-input-sm vesper-text-input-success"
>
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-xs vesper-text-input-field"
    name="field-name"
    placeholder="Placeholder text"
    type="text"
    value="banana"
  />
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;

exports[`text-input [snapshot] > sm, warning 1`] = `
<div
  class="vesper-text-input vesper-text-input-sm vesper-text-input-warning"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-xs vesper-text-input-field"
    placeholder=" "
    type="text"
    value="banana"
  />
</div>
`;

exports[`text-input [snapshot] > sm, warning, disabled 1`] = `
<div
  class="vesper-text-input vesper-text-input-sm vesper-text-input-warning"
>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-xs vesper-text-input-field"
    disabled=""
    placeholder=" "
    type="text"
  />
</div>
`;

exports[`text-input [snapshot] > sm, warning, full options 1`] = `
<div
  class="vesper-text-input vesper-text-input-sm vesper-text-input-warning"
>
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        clip-rule="evenodd"
        d="M16 6.61133V12.3887L14.7334 13.6543L21 19.9209L19.9209 21L13.6543 14.7334L12.3887 16H6.61133L3 12.3887V6.61133L6.61133 3H12.3887L16 6.61133ZM4.5 7.23242V11.7676L7.23242 14.5H11.7676L14.5 11.7676V7.23242L11.7676 4.5H7.23242L4.5 7.23242Z"
        fill="currentColor"
        fill-rule="evenodd"
      />
    </svg>
  </span>
  <input
    aria-label="Label"
    class="vesper-typography vesper-typography-copy-xs vesper-text-input-field"
    name="field-name"
    placeholder="Placeholder text"
    type="text"
    value="banana"
  />
  <span
    class="vesper-text-input-icon"
  >
    <svg
      fill="none"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
        fill="currentColor"
      />
    </svg>
  </span>
</div>
`;
